--- a/admin/language/pt-BR/com_extensionscreator.ini
+++ b/admin/language/pt-BR/com_extensionscreator.ini
@@ -14,6 +14,9 @@ COM_EXTENSIONSCREATOR_ELEMENT="Elemento"
 COM_EXTENSIONSCREATOR_VENDOR="Vendor Namespace"
 COM_EXTENSIONSCREATOR_VIEWS="Views (Visões)"
 COM_EXTENSIONSCREATOR_TABLES="Tabelas"
+COM_EXTENSIONSCREATOR_CLIENT="Cliente (Ambiente)"
+COM_EXTENSIONSCREATOR_CLIENT_SITE="Site (Frontend)"
+COM_EXTENSIONSCREATOR_CLIENT_ADMINISTRATOR="Administrador (Backend)"
 COM_EXTENSIONSCREATOR_VERSION="Versão"
 COM_EXTENSIONSCREATOR_DESCRIPTION="Descrição"
 COM_EXTENSIONSCREATOR_AUTHOR="Autor"
