--- a/admin/language/en-GB/com_extensionscreator.ini
+++ b/admin/language/en-GB/com_extensionscreator.ini
@@ -14,6 +14,9 @@ COM_EXTENSIONSCREATOR_ELEMENT="Element"
 COM_EXTENSIONSCREATOR_VENDOR="Vendor Namespace"
 COM_EXTENSIONSCREATOR_VIEWS="Views"
 COM_EXTENSIONSCREATOR_TABLES="Tables"
+COM_EXTENSIONSCREATOR_CLIENT="Client"
+COM_EXTENSIONSCREATOR_CLIENT_SITE="Site"
+COM_EXTENSIONSCREATOR_CLIENT_ADMINISTRATOR="Administrator"
 COM_EXTENSIONSCREATOR_VERSION="Version"
 COM_EXTENSIONSCREATOR_DESCRIPTION="Description"
 COM_EXTENSIONSCREATOR_AUTHOR="Author"
